added swipe for slider

--- a/dude/index.html
+++ b/dude/index.html
@@ -46,6 +46,10 @@
                             <div class="hero-slider__wrapper">
                                 <ul class="hero-slider__list">
                                     <li class="hero-slider__item">
+                                        <img src="./assets/famous-celebrity.webp" alt="famous-celebrity" />
+                                        <p class="hero-slider__text">Famous celebrity</p>
+                                    </li>
+                                    <li class="hero-slider__item">
                                         <img src="./assets/you-neighbor.webp" alt="you-neighbor" />
                                         <p class="hero-slider__text">You neighbor</p>
                                     </li>
@@ -56,6 +60,14 @@
                                     <li class="hero-slider__item">
                                         <img src="./assets/famous-celebrity.webp" alt="famous-celebrity" />
                                         <p class="hero-slider__text">Famous celebrity</p>
+                                    </li>
+                                    <li class="hero-slider__item">
+                                        <img src="./assets/you-neighbor.webp" alt="you-neighbor" />
+                                        <p class="hero-slider__text">You neighbor</p>
+                                    </li>
+                                    <li class="hero-slider__item">
+                                        <img src="./assets/step-sister.webp" alt="step-sister" />
+                                        <p class="hero-slider__text">Step sister</p>
                                     </li>
                                 </ul>
                             </div>
